--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
    runs-on: ubuntu-latest
    steps:
      - name: ChatGPT Review
-       uses: magnificode-ltd/chatgpt-reviewer-github-action@v0.0.8-prerelease
+       uses: magnificode-ltd/chatgpt-reviewer-github-action@v0.0.7
        env:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
