--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,17 +2,14 @@ name: chatgpt-reviewer-github-action
 run-name: chatgpt-reviewer-github-action
 on: [pull_request, push]
 jobs:
- chatgpt-reviewer-github-action:
-   runs-on: ubuntu-latest
-   steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-      with:
-        repository: magnificode-ltd/chatgpt-reviewer-github-action
-        ref: feature/rate-limit-fixes
-    - name: start action
-      run: node ./dist/index.js
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+ chatgpt-code-reviewer:
+       runs-on: ubuntu-latest
+       steps:
+         - name: ChatGPT Review
+           uses: magnificode-ltd/chatgpt-code-reviewer@v0.0.8-prerelease
+           with:
+             model: gpt-3.5-turbo
+           env:
+             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+             OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
          
