--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,18 @@
 name: chatgpt-reviewer-github-action
 run-name: chatgpt-reviewer-github-action
-on: [pull_request]
+on: [pull_request, push]
 jobs:
- chatgpt-reviewer-github-action:
-   runs-on: ubuntu-latest
-   steps:
-     - name: ChatGPT Review
-       uses: magnificode-ltd/chatgpt-reviewer-github-action@v0.0.8-prerelease
-       env:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-         
+ chatgpt-code-reviewer:
+  runs-on: ubuntu-latest
+  steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+       repository: magnificode-ltd/chatgpt-code-reviewer
+       ref: feature/rate-limit-fixes
+       
+    - name: start script
+      run: node ./dist/index.js
+  env:
+   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
