--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,17 +2,14 @@ name: chatgpt-code-reviewer
 run-name: chatgpt-code-reviewer
 on: [pull_request]
 jobs:
- chatgpt-code-reviewer:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-      with:
-       repository: magnificode-ltd/chatgpt-code-reviewer
-       ref: feature/check-for-limitation-of-openai
-       
-    - name: start script
-      run: node ./dist/index.js
-  env:
-   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+  chatgpt-code-reviewer:
+    runs-on: ubuntu-latest
+    steps:
+      - name: ChatGPT Review
+        uses: magnificode-ltd/chatgpt-code-reviewer@v0.0.8
+        with:
+          model: gpt-3.5-turbo
+        # max_tokens: 4096
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
